--- a/package.json
+++ b/package.json
@@ -51,11 +51,14 @@
     },
     "devDependencies": {
           "@types/node": "^20.10.0",
+          "@types/react": "^18.3.0",
+          "@types/react-dom": "^18.3.0",
           "@vitejs/plugin-react-swc": "^3.10.2",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
         "@testing-library/user-event": "^14.5.2",
         "jsdom": "^24.0.0",
+        "typescript": "^5.7.2",
         "vite": "6.3.5",
         "vitest": "^1.6.0"
       },
