--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
         "@testing-library/user-event": "^14.5.2",
+        "concurrently": "^9.1.0",
         "jsdom": "^24.0.0",
         "typescript": "^5.7.2",
         "vite": "6.3.5",
@@ -64,6 +65,8 @@
       },
       "scripts": {
           "dev": "vite",
+          "dev:server": "cd server && npm run dev",
+          "dev:all": "concurrently \"npm run dev\" \"npm run dev:server\" --names \"frontend,backend\" --prefix-colors \"cyan,yellow\"",
         "build": "vite build",
         "test": "vitest"
       }
