Refactor user profile management and enhance accessibility
- Improved UserMenu and Popover components with better accessibility features.
- Added new fields to AppUser type for comprehensive user profiles.
- Enhanced ProfileSettings page with additional data fields and photo upload capabilities.
- Implemented a cropping feature for profile pictures.
- Fixed TypeScript errors and improved state management in related components.
- Updated README with project structure and instructions.

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
 MONGODB_URI=mongodb+srv://butaslacjino7_db_user:Cloud2026@pesti-users.bkonwnp.mongodb.net/pesti?retryWrites=true&w=majority&appName=pesti-users
-JWT_SECRET=cloud2026
+JWT_SECRET=cloudengineer2026cutie
 PORT=8000
+ADMIN_EMAIL=admin@ews.local
+ADMIN_PASSWORD=admin123
+ADMIN_NAME=System Administrator
+ADMIN_ROLE=Administrator
