--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "Early Warning Dashboard",
+      "name": "pesti",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
