--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
             "cmdk": "^1.1.1",
             "date-fns": "*",
             "embla-carousel-react": "^8.6.0",
+            "iconoir-react": "^7.11.0",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
