chore: update .gitignore to include Python-related files and directories
- Added entries for Python cache files, compiled files, and virtual environments to .gitignore for cleaner project management.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,17 @@ Thumbs.db
 coverage
 .nyc_output
 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+.venv
+
 # Temporary files
 *.tmp
 *.temp
